--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "next": "^12.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-images": "^1.2.0-beta.7",
+    "react-images-viewer": "^1.7.1",
     "react-photo-gallery": "^8.0.0",
     "regexify-string": "^1.0.17"
   },
